Fix positioning of project_status div so it doesn't overlap with last changeset build info

--- a/public/stylesheets/cruisecontrol.less
+++ b/public/stylesheets/cruisecontrol.less
@@ -227,7 +227,7 @@ a:hover {
 
     .project_status  { 
       bottom: 2px;
-      left: 240px;
+      left: 280px;
     }
 
     .upper {
